--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,3 +39,15 @@ jobs:
         run: |
           docker buildx build -t ${{ env.REGISTRY}}/filipe-souza/rathena:${{github.event.inputs.version }} -f Dockerfile --target release . --load
           docker push ${{ env.REGISTRY }}/filipe-souza/rathena:${{github.event.inputs.version }}
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: '${{ env.REGISTRY }}/filipe-souza/rathena:${{github.event.inputs.version }}'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
