--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ permissions:
 
 jobs:
   build_and_push:
+    name: "Builds the binaries for Debian"
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
@@ -46,6 +47,42 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: '${{ env.REGISTRY }}/filipe-souza/rathena:${{github.event.inputs.version }}'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
+  build_and_push_alpine:
+    name: "Builds the binaries for Alpine Linux"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Checkout the repo
+        uses: actions/checkout@v4
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build release image
+        run: |
+          docker buildx build -t ${{ env.REGISTRY}}/filipe-souza/rathena:${{github.event.inputs.version }}-alpine -f Dockerfile.alpine --target release . --load
+          docker push ${{ env.REGISTRY }}/filipe-souza/rathena:${{github.event.inputs.version }}-alpine
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: '${{ env.REGISTRY }}/filipe-souza/rathena:${{github.event.inputs.version }}-alpine'
           format: 'sarif'
           output: 'trivy-results.sarif'
 
